[package]
name = "lotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4"
iced_web = "0.4"
wbg-rand = { git = "https://github.com/alexcrichton/wbg-rand", rev = "0c8d7344b3ee9c12ff9217d6c62e6ee934ccad9b" }
